subprojects {
	apply plugin: 'java'

	sourceCompatibility = JavaVersion.VERSION_1_8
	targetCompatibility = JavaVersion.VERSION_1_8

	group = 'com.tazadum.glsl'
	version = '1.1.0'

    repositories {
        jcenter()
    }

    ext {
        antlrVersion = '4.7.+'
    }

    dependencies {
        compile "org.slf4j:slf4j-api:1.8.+"

        testCompile 'org.mockito:mockito-core:2.9.0'

        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.0'
        testImplementation 'org.junit.jupiter:junit-jupiter-params:5.5.0'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.0'
    }
}